# ruuveal

./: .gitignore  Makefile.am  README.md  autogen.sh  bruutveal.c  configure.ac  htcaes.c  htcaes.h  htckey.c  htckey.h  htclargezip.c  htclargezip.h  htczip.c  htczip.h  main.c
htc/: devices.c  devices.h  keydata.h  keymap.h
tests/: run.sh
